--- a/code/src/components/Input/Input.css
+++ b/code/src/components/Input/Input.css
@@ -17,11 +17,7 @@
 }
 
 .input_area:has(.error) {
-  background-color: color-mix(
-    in srgb,
-    var(--error-color) 50%,
-    var(--theme-color) 50%
-  );
+  background-color: var(--error-color-bg);
   color: var(--error-color);
 }
 
@@ -32,8 +28,8 @@
 .input_area:has(.error) button {
   background-color: color-mix(
     in srgb,
-    var(--error-color) 50%,
-    var(--theme-color) 50%
+    var(--error-color) 80%,
+    var(--theme-color-not) 20%
   );
 }
 
