--- a/code/src/css/utils/color.css
+++ b/code/src/css/utils/color.css
@@ -32,6 +32,7 @@
 
   :root {
     --error-color: #ba3737;
+    --error-color-bg: #681212;
     --error-color-hover: #de6363;
     --error-color-active: #6d2525;
     --error-color-border: #dc8787;
